Add favicon via https

--- a/app/views/layouts/_html_head.html.erb
+++ b/app/views/layouts/_html_head.html.erb
@@ -1,4 +1,4 @@
-  <link href="<%= Settings.server_url %>/favicon.ico" rel="shortcut icon"  />
+  <link href="<%= Settings.server_url_https %>/favicon.ico" rel="shortcut icon"  />
   <!--[if lt IE 8]>
     <meta http-equiv="REFRESH" content="0;url=http://www.versioneye.com/oldbrowser.html" />
   <![endif]-->
