--- a/app/views/auth/bitbucket/new.html.erb
+++ b/app/views/auth/bitbucket/new.html.erb
@@ -2,7 +2,7 @@
 
 <div class="span10 col2-left" >
 
-  <%= form_tag('/auth/bitbucket/authorize', :method => 'post', :class => 'form-horizontal') do  %>
+  <%= form_tag('/auth/bitbucket/create', :method => 'post', :class => 'form-horizontal') do  %>
 
     <div class="control-group">
       <div class="controls">
@@ -11,7 +11,7 @@
     </div>
 
     <div class="control-group">
-      <%= label_tag(:email, "E-Mail", :class => "control-label", :for => "email") %>
+      <%= label_tag(:email, "Email", :class => "control-label", :for => "email") %>
       <div class="controls">
         <%= text_field_tag :email, @email, :class => "round", :id => "email"  %> mandatory
       </div>
