#236 customize ui for new NPM data

--- a/app/views/products/_product_show_downloads.html.erb
+++ b/app/views/products/_product_show_downloads.html.erb
@@ -2,7 +2,7 @@
 <% if !downloads.nil? && !downloads.empty? %>
   <div class="row well box_download" >
     <div class="span2">
-      <h5 class="dep_header" style="margin-top: 0px;">
+      <h5 class="dep_header" >
         <%= pluralize(downloads.count, 'Download') %>
       </h5>
     </div>
