--- a/app/views/products/_product_show_dependencies_npm.html.erb
+++ b/app/views/products/_product_show_dependencies_npm.html.erb
@@ -10,7 +10,7 @@
 	</div>
 	<div class="span7" >
 		<% if !main_dependencies.empty? %>
-      <%= render :partial => "products/helpers/dependency_table", :locals => { :dependencies => main_dependencies }  %>
+      <%= render :partial => 'products/helpers/dependency_table', :locals => { :dependencies => main_dependencies }  %>
     <% end %>
 	</div>
 </div>
