--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -46,7 +46,7 @@
     <%= render 'shared/dialog_login_feature' %>
   <% end %>
 
-  <section class="container" style="margin-top: 50px;">
+  <section class="container l_margin_top_50" >
     <%= render 'layouts/searchbar' %>
     <div class="well-white row">
       <%= yield %>
