--- a/app/views/layouts/application_visual.html.erb
+++ b/app/views/layouts/application_visual.html.erb
@@ -17,7 +17,7 @@
 
 <body>
   <%= render 'layouts/header' %>
-  <div class="container" style="text-align: center;" id="container">
+  <div class="container l_margin_top_50" style="text-align: center;" id="container">
     <section class="round" id="section" >
       <% flash.each do |key, value| %>
         <div class="flash <%= key %>"><%= value %></div>
