--- a/app/views/shared/_language_icons.html.erb
+++ b/app/views/shared/_language_icons.html.erb
@@ -4,11 +4,11 @@
 			<a href="<%= link %>">
 				<div class="icon_<%= language.gsub('.', '').downcase %> on"
 					 id="<%= link %>_<%= language.downcase %>_icon"
-					 title = "<%= title %>" ></div>
+					 title = "<%= title_text %>" ></div>
 			</a>
 		<% else %>
 			<div class="icon_<%= language.gsub(".", "").downcase %> on"
-					 title = "<%= title %>" ></div>
+					 title = "<%= title_text %>" ></div>
 		<% end %>
 	<% else %>
 		<div class="eye_off"></div>
