--- a/app/views/shared/_version_comment_replies.html.erb
+++ b/app/views/shared/_version_comment_replies.html.erb
@@ -5,7 +5,7 @@
 		<div class="row">
 			<span class="icon_user"></span>
 			<strong>
-				<%= link_to reply.fullname, user_path(reply.username) %> at <%= reply.created_at.strftime("%b %d, %Y - %I:%m %p") %>
+				<%= link_to reply.fullname, user_path(reply.username) %> at <%= reply.created_at.strftime('%b %d, %Y - %I:%m %p') %>
 			</strong>
 		</div>
 		<div class="row">
