--- a/app/views/user_mailer/suggest_packages_email.html.erb
+++ b/app/views/user_mailer/suggest_packages_email.html.erb
@@ -1,5 +1,5 @@
 
-<% td_button_style = "background: #79bbff; padding-top: 6px; padding-right: 10px; padding-bottom: 6px; padding-left: 10px; -webkit-border-radius: 4px; -moz-border-radius: 4px; border-radius: 4px; color: #fff; font-weight: bold; text-decoration: none; font-family: Helvetica, Arial, sans-serif; display: block;" %>
+<% td_button_style = 'background: #79bbff; padding-top: 6px; padding-right: 10px; padding-bottom: 6px; padding-left: 10px; -webkit-border-radius: 4px; -moz-border-radius: 4px; border-radius: 4px; color: #fff; font-weight: bold; text-decoration: none; font-family: Helvetica, Arial, sans-serif; display: block;' %>
 
 <!-- content start -->
 <table >
