--- a/app/views/user/projects/helpers/_project_source.html.erb
+++ b/app/views/user/projects/helpers/_project_source.html.erb
@@ -1,10 +1,10 @@
 
     This is a project from
 
-    <% if project.source.eql? "github" %>
+    <% if project.source.eql? 'github' %>
       <a href="https://github.com/<%= project.github_project%>/tree/<%= project.github_branch %>">GitHub <%= project.github_branch %> branch</a>.
 
-      <% filename = project[:s3_filename].to_s.gsub(/\S+\_/, "") %>
+      <% filename = project[:s3_filename].to_s.gsub(/\S+\_/, '') %>
       We parsed this file:
       <a href = "https://github.com/<%= project.github_project %>/blob/<%= project.github_branch %>/<%= filename %>" >
         <%= filename %>
