Little refactoring for bitbucket signin/signup

--- a/app/views/shared/_login_with_bitbucket.html.erb
+++ b/app/views/shared/_login_with_bitbucket.html.erb
@@ -1,4 +1,4 @@
-<button onclick="page_view('ga_login_with_github'); document.location.href='<%= auth_bitbucket_signin_url %>';"
+<button onclick="page_view('ga_login_with_bitbucket'); document.location.href='<%= auth_bitbucket_signin_url %>';"
   class="btn btn-bitbucket btn-large btn-signin">
   <i class = "icon-github"></i> | Login with Bitbucket
 </button>
