update new user email

--- a/app/views/user_mailer/new_user_email.html.erb
+++ b/app/views/user_mailer/new_user_email.html.erb
@@ -5,5 +5,6 @@
   Fullname: <%= @user.fullname %> <br/>
   Username: <a href="http://www.versioneye.com/users/<%= @user.username %>"><%= @user.username %></a> <br/>
   GitHub ID: <%= @user.github_id %> <br/>
+  BitBucket ID: <%= @user.bitbucket_id %> <br/>
   Promo Code: <%= @user.promo_code %> <br/>
 </p>
