--- a/app/views/products/_product_show_other_versions.html.erb
+++ b/app/views/products/_product_show_other_versions.html.erb
@@ -8,9 +8,9 @@
     <% @product.sorted_versions.each do |version|  %>
       <div>
         <% if VersionTagRecognizer.release?(version.to_s) %>
-          <a href="<%=product_version_path( @product, version.to_s )%>"><%=version.to_s%></a>
+          <a href="<%=product_version_path( @product, version.to_param )%>"><%=version.to_s%></a>
         <% else %>
-          <a style="color: brown" href="<%=product_version_path( @product, version.to_s )%>"><%=version.to_s%></a>
+          <a style="color: brown" href="<%=product_version_path( @product, version.to_param )%>"><%=version.to_s%></a>
         <% end %>
         <span class="meta_text_small">(<%= version.released_or_detected.strftime("%b %d, %Y") %>)</span>
       </div>
