--- a/app/views/shared/_dialog_dependency_badge.html.erb
+++ b/app/views/shared/_dialog_dependency_badge.html.erb
@@ -52,8 +52,8 @@
       image_url = document.URL.split("?")[0] + "/badge.png";
       url       = document.URL.split("?")[0]
       <% if @product %>
-        image_url = "<%= product_version_badge_url(:lang => @product.language_esc, :key => @product.to_param, :version => @product.version) %>" + ".png";
-        url = "<%= package_version_url(:lang => @product.language_esc, :key => @product.to_param, :version => @product.version) %>";
+        image_url = "<%= product_version_badge_url(:lang => @product.language_esc, :key => @product.to_param, :version => Version.encode_version(@product.version) ) %>" + ".png";
+        url = "<%= package_version_url(:lang => @product.language_esc, :key => @product.to_param, :version => Version.encode_version(@product.version)) %>";
       <% end %>
 
       markdown_url = "[![Dependency Status](" + image_url + ")](" + url + ")";
