--- a/app/views/products/show_visual.html.erb
+++ b/app/views/products/show_visual.html.erb
@@ -60,7 +60,7 @@
       </h4>
     </div>
     <div style="text-align: center;">
-      <a href="/<%=@product.language_esc%>/<%=@product.to_param%>/<%=@version.to_url_param%>">See more details</a>
+      <a href="/<%=@product.language_esc%>/<%=@product.to_param%>/<%=@version.to_param%>">See more details</a>
     </div>
     <br/>
     <br/>
