Rename novel packages to new packages

--- a/app/views/language/helpers/_language_block.html.erb
+++ b/app/views/language/helpers/_language_block.html.erb
@@ -34,7 +34,7 @@
         <td>Releases</td>
         <td>
           <%= link_to "Latest releases", package_latest_path %> <br />
-          <%= link_to "Novel packages", package_novel_path %>
+          <%= link_to "New packages", package_novel_path %>
         </td>
       </tr>
       <tr>
