Fixed #442 top 10 most referenced libraries on lang page

--- a/app/assets/stylesheets/main.css.scss
+++ b/app/assets/stylesheets/main.css.scss
@@ -856,6 +856,7 @@ h2 + .row {
   }
 }
 
+#most-referenced-container,
 #top-products-container.media,
 #latest-products-container.media {
     & .media-body {
