--- a/app/views/language/helpers/_latest.html.erb
+++ b/app/views/language/helpers/_latest.html.erb
@@ -1,5 +1,5 @@
 <div id = "latest-products-container" class = "media">
-  <h2 class="section_header"> Latest updated libraries </h2>
+  <h2 class="section_header"> Currently updated libraries </h2>
   <% @latest_products.each_with_index do |latest_prod, i| %>
     <% if latest_prod && latest_prod.product %>
       <% prod = latest_prod.product %>
