--- a/app/views/language/show.html.erb
+++ b/app/views/language/show.html.erb
@@ -14,11 +14,15 @@
 
   <div class = "row">
     <div class = "span5">
-      <%= render "language/helpers/top" %>
+      <%= render "language/helpers/most_referenced" %>
     </div>
     <div class = "span5 offset1">
-      <%= render "language/helpers/latest" %>
+      <%= render "language/helpers/top" %>
     </div>
+  </div>
+
+  <div>
+    <%= render "language/helpers/latest" %>
   </div>
 
   <div class = "row">
