#276 - little fixes for bower_crawler;

--- a/app/views/products/_product_show_dependencies.html.erb
+++ b/app/views/products/_product_show_dependencies.html.erb
@@ -7,6 +7,7 @@
       "#{Project::A_TYPE_MAVEN2}"    => 'product_show_dependencies_maven2',
       "#{Project::A_TYPE_RUBYGEMS}"  => 'product_show_dependencies_rubygems',
       "#{Project::A_TYPE_NPM}"       => 'product_show_dependencies_npm',
+      "#{Project::A_TYPE_BOWER}"     => 'product_show_dependencies_bower',
       "#{Project::A_TYPE_COMPOSER}"  => 'product_show_dependencies_packagist',
       "#{Project::A_TYPE_COCOAPODS}" => 'products/cocoapods/product_show_dependencies',
     }
