Add new newsletter

--- a/app/views/newsletter_mailer/newsletter_new_features_email.html.erb
+++ b/app/views/newsletter_mailer/newsletter_new_features_email.html.erb
@@ -4,17 +4,17 @@ Hey <%= @user.fullname %>,
 </p>
 <ul>
   <li>
-    <b>New Software License View:</b> Software licenses are one of the most important meta informations we collect at VersionEye and some of our enterprise customers need to know these for due diligence. We already had a license view, but now this view is new and improved. Read more
-    <a href="http://versioneye.wordpress.com/2013/12/17/new-software-license-view/">here</a>.<br/><br/>
-  </li>
-  <li>
-    <b>Updated GitHub SinglePage App:</b> We updated our GitHub SinglePage app with multiple file selection, async fetching and a couple more feature. Read more <a href="http://versioneye.wordpress.com/2013/12/13/updated-github-singlepage-app/">here</a>.<br/><br/>
-    <img src="http://versioneye.files.wordpress.com/2013/12/screen-shot-2013-12-13-at-11-48-00.png" width="600" />
+    <b>BitBucket Integration:</b> Beside GitHub now we are supporting BitBucket. Now you can login with your BitBucket account and VersionEye can actively monitor BitBucket repositories. Read more
+    <a href="http://blog.versioneye.com/2014/01/02/versioneye-bitbucket/">here</a>.<br/><br/>
+    <img src="http://versioneye.files.wordpress.com/2014/01/bitbucket.png" />
     <br/><br/>
   </li>
   <li>
-    <b>References:</b> The references number shows how many other software libraries are referencing the current library. This number is now clickable.
-    Read more <a href="http://versioneye.wordpress.com/2013/12/13/which-packages-use-my-library/">here</a><br/><br/>
+    <b>Improvements for Node.JS / NPM:</b> Because NPM is the fastest growing repository, we reworked our integration for Node.JS. Read more <a href="http://blog.versioneye.com/2014/01/03/improved-integration-for-nodejs-and-npm/">here</a>.<br/><br/>
+  </li>
+  <li>
+    <b>Most referenced packages:</b> On our language pages we are showing now the top 10 most referenced packages.
+    Read more <a href="http://blog.versioneye.com/2014/01/06/most-referenced-packages/">here</a><br/><br/>
   </li>
 </ul>
 <p>
