--- a/app/assets/stylesheets/main.css.scss
+++ b/app/assets/stylesheets/main.css.scss
@@ -26,6 +26,10 @@ pre.prettyprint{
   margin-bottom: 0;
 }
 
+.test_456{
+  color: white;
+}
+
 
 /* Sections
 -------------------------------------------------- */
