Fixed #444. Suggesting new packages from main nav.

--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -37,6 +37,12 @@
             </li>
             <li class="divider-vertical"></li>
             <li>
+              <a href="/search?q=suggest_a_new_package_to_versioneye" title="Suggest a new package">
+                <i class="icon-plus" ></i>
+              </a>
+            </li>
+            <li class="divider-vertical"></li>
+            <li>
               <a href="JavaScript: load_dialog_feedback()" title="Feedback">
                 <i class="icon-comment" ></i>
               </a>
