--- a/app/views/products/helpers/_kpi_summary.html.erb
+++ b/app/views/products/helpers/_kpi_summary.html.erb
@@ -24,14 +24,19 @@
   <% end %>
 </div>
 
-<% semver = SemVer.parse( @product.version.to_s.strip ) %>
-<% if semver %>
-  <div class="flash success" style="margin-bottom: 20px;" >
-    This version number (<%= @product.version %>) fits <a href="http://semver.org">semantic versioning 2.0.0</a>!
-  </div>
-<% else %>
-  <div class="flash error" style="margin-bottom: 20px;" >
-    This version number (<%= @product.version %>) doesn't fit <a href="http://semver.org">semantic versioning 2.0.0</a>!
-  </div>
+<% begin  %>
+  <% semver = SemVer.parse( @product.version.to_s.strip ) %>
+  <% if semver %>
+    <div class="flash success" style="margin-bottom: 20px;" >
+      This version number (<%= @product.version %>) fits <a href="http://semver.org">semantic versioning 2.0.0</a>!
+    </div>
+  <% else %>
+    <div class="flash error" style="margin-bottom: 20px;" >
+      This version number (<%= @product.version %>) doesn't fit <a href="http://semver.org">semantic versioning 2.0.0</a>!
+    </div>
+  <% end %>
+<% rescue => e %>
+
 <% end %>
+
 
