--- a/app/views/products/helpers/_kpis.html.erb
+++ b/app/views/products/helpers/_kpis.html.erb
@@ -1,11 +1,7 @@
 
 <div class="row" >
 
-  <% #semver = SemVer.parse( @current_version.to_s.strip ) %>
-  <% #current_color_class = 'info' %>
-  <% #current_color_class = 'success' if semver %>
-  <% #current_color_class = 'error' if semver.nil? %>
-  <div class="flash info" style="margin-bottom: 5px;" >
+  <div class="flash info l_margin_bottom_5" >
     <b>Current:</b>
     <% if @current_version && !@current_version.to_s.eql?(@product.version.to_s) %>
       <a href="/<%= @product.language_esc %>/<%= @product.to_param %>/<%= @current_version.to_s %>" ><%= @current_version.to_s %></a>
@@ -14,11 +10,10 @@
     <% end %>
   </div>
 
-  <% #semver = SemVer.parse( @product.version.to_s.strip ) %>
-  <% #this_color_class = 'info' %>
-  <% #this_color_class = 'success' if semver %>
-  <% #this_color_class = 'error' if semver.nil? %>
-  <div class="flash info %>" style="margin-bottom: 5px;">
+  <% this_color_class = 'info' %>
+  <% this_color_class = 'success' if @version.semver_2 %>
+  <% this_color_class = 'error' if !@version.semver_2 %>
+  <div class="flash <%= this_color_class %>" style="margin-bottom: 5px;">
     <b>This:</b> <%= @product.version %>
   </div>
 
@@ -29,7 +24,7 @@
   <% rel_bg = 'info'    if days_ago >= 30 && days_ago <= 90  %>
   <% rel_bg = 'warn'    if days_ago > 90  && days_ago <= 180  %>
   <% rel_bg = 'error'   if days_ago > 180 %>
-  <div class="flash <%= rel_bg %>" style="margin-bottom: 5px;" >
+  <div class="flash <%= rel_bg %> l_margin_bottom_5"  >
     <b title="<%= @product.released_ago_text %>" >Released:</b>
     <span title="<%= @product.released_ago_text %>">
       <% if @product.released_ago_in_words.nil? %>
@@ -57,7 +52,7 @@
     <% art_bg = "error" %>
   <% end %>
 
-  <div class="flash <%= art_bg %>" style="margin-bottom: 5px;" >
+  <div class="flash <%= art_bg %> l_margin_bottom_5">
     <b title="<%= art_text %>" >Avg. Rel. Time:</b>
     <span title="<%= art_text %>">
       <% if average_release_time.nil? || average_release_time == 0 %>
@@ -81,7 +76,7 @@
   <% ref_bg = 'warn'    if references >  0  and references < 10  %>
   <% ref_bg = 'error'   if references == 0 %>
   <% ref_text = "#{references} packages are referencing this project" %>
-  <div class="flash <%= ref_bg %>" style="margin-bottom: 5px;" >
+  <div class="flash <%= ref_bg %> l_margin_bottom_5" >
     <b title="<%= ref_text %>">References:</b>
     <span title="<%= ref_text %>">
       <% if references > 0 %>
@@ -108,7 +103,7 @@
   <% licenses = @product.licenses %>
   <% license_bg = 'info' %>
   <% license_bg = "error" if !licenses || licenses.empty? %>
-  <div class="flash <%= license_bg %>" style="margin-bottom: 5px;">
+  <div class="flash <%= license_bg %> l_margin_bottom_5" >
     <b title="license">License:</b>
     <% if licenses && !licenses.empty? %>
       <% licenses.each do |license| %>
@@ -123,7 +118,7 @@
     <% end %>
   </div>
 
-  <div class="flash info" style="margin-bottom: 5px;">
+  <div class="flash info l_margin_bottom_5" >
     <b title="<%= title_text %>">Language:</b>
     <% if @product.language.eql?(Product::A_LANGUAGE_RUBY) ||
           @product.language.eql?(Product::A_LANGUAGE_JAVA) ||
