--- a/app/views/products/helpers/_what_is_versioneye.html.erb
+++ b/app/views/products/helpers/_what_is_versioneye.html.erb
@@ -14,7 +14,9 @@
     </div>
     <div class="row">
       <div class = "modal-body span7" style="text-align: left;">
-        <iframe src="https://player.vimeo.com/video/72324479" width="500" height="281" allowFullScreen></iframe>
+        <a href="https://player.vimeo.com/video/72324479" target="versioneye_video" >
+          <%= image_tag("versioneye_video.png") %>
+        </a>
       </div>
       <div class="modal-body span3 pull-right" style="text-align: left">
         <br/>
