--- a/app/views/newsletter_mailer/newsletter_new_features_email.html.erb
+++ b/app/views/newsletter_mailer/newsletter_new_features_email.html.erb
@@ -4,17 +4,16 @@ Hey <%= @user.fullname %>,
 </p>
 <ul>
   <li>
-    <b>BitBucket Integration:</b> Beside GitHub now we are supporting BitBucket. Now you can login with your BitBucket account and VersionEye can actively monitor BitBucket repositories. Read more
-    <a href="http://blog.versioneye.com/2014/01/02/versioneye-bitbucket/">here</a>.<br/><br/>
-    <img src="http://versioneye.files.wordpress.com/2014/01/bitbucket.png" />
+    <b>Semantic Versioning:</b> Semantic versioning is something every software developer should know about. Now we mark version numbers green if they are conform with semantic versioning. Check out our <a href="http://blog.versioneye.com/2014/01/16/semantic-versioning/">beginners guide to semantic versioning</a>.
     <br/><br/>
   </li>
   <li>
-    <b>Improvements for Node.JS / NPM:</b> Because NPM is the fastest growing repository, we reworked our integration for Node.JS. Read more <a href="http://blog.versioneye.com/2014/01/03/improved-integration-for-nodejs-and-npm/">here</a>.<br/><br/>
+    <b>Submit new packages:</b> If you want to get notified about new versions of projects we don't track yet, you can now submit them to us and we will integrate them into our crawling framework. Read mor that <a href="http://blog.versioneye.com/2014/01/16/submit-new-packages/">here</a>.
+    <br/><br/>
   </li>
   <li>
-    <b>Most referenced packages:</b> On our language pages we are showing now the top 10 most referenced packages.
-    Read more <a href="http://blog.versioneye.com/2014/01/06/most-referenced-packages/">here</a><br/><br/>
+    <b>Follow All:</b> Now you can follow multiple software libraries with one single click.
+    Read more <a href="http://blog.versioneye.com/2014/01/16/follow-all/">here</a><br/><br/>
   </li>
 </ul>
 <p>
