html fix for bower snippet

--- a/app/views/products/helpers/_bower_snippet.html.erb
+++ b/app/views/products/helpers/_bower_snippet.html.erb
@@ -6,9 +6,7 @@
       <h5 class="dep_header">Bower install</h5>
     </div>
     <div class="span5" style="width: 430px; margin-bottom: 0;">
-      <pre class = "prettyprint" style="background-color: #fff; margin-bottom: 0;"><code>
-bower install <%= @product.name %>#<%= @version.to_s %>
-      </code></pre>
+      <pre class = "prettyprint" style="background-color: #fff; margin-bottom: 0;"><code>bower install <%= @product.name %>#<%= @version.to_s %></code></pre>
     </div>
   </div>
 
@@ -17,9 +15,7 @@ bower install <%= @product.name %>#<%= @version.to_s %>
       <h5 class="dep_header">bower.json</h5>
     </div>
     <div class="span5" style="width: 430px; margin-bottom: 0;">
-      <pre class = "prettyprint" style="background-color: #fff; margin-bottom: 0;"><code>
-"<%= @product.name %>": "<%= @version.to_s %>"
-      </code></pre>
+      <pre class = "prettyprint" style="background-color: #fff; margin-bottom: 0;"><code>"<%= @product.name %>": "<%= @version.to_s %>"</code></pre>
     </div>
   </div>
 
