Remove Google fonts and load them from google

--- a/app/views/layouts/_html_head.html.erb
+++ b/app/views/layouts/_html_head.html.erb
@@ -1,4 +1,5 @@
   <link href="<%= Settings.server_url_https %>/favicon.ico" rel="shortcut icon"  />
+  <link rel="stylesheet" type="text/css" href="http://fonts.googleapis.com/css?family=Droid+Serif|Droid+Sans">
   <!--[if lt IE 8]>
     <meta http-equiv="REFRESH" content="0;url=http://www.versioneye.com/oldbrowser.html" />
   <![endif]-->
