--- a/app/views/products/helpers/_kpis.html.erb
+++ b/app/views/products/helpers/_kpis.html.erb
@@ -126,6 +126,7 @@
           @product.language.eql?(Product::A_LANGUAGE_CLOJURE) ||
           @product.language.eql?(Product::A_LANGUAGE_NODEJS) ||
           @product.language.eql?(Product::A_LANGUAGE_PYTHON) ||
+          @product.language.eql?(Product::A_LANGUAGE_JAVASCRIPT) ||
           @product.language.eql?(Product::A_LANGUAGE_OBJECTIVEC) ||
           @product.language.eql?(Product::A_LANGUAGE_R) %>
       <a href="/<%= @product.language_esc %>" title="<%= @product.language_esc %>"><%= @product.language %></a>
