--- a/app/views/newsletter_mailer/newsletter_new_features_email.html.erb
+++ b/app/views/newsletter_mailer/newsletter_new_features_email.html.erb
@@ -4,16 +4,10 @@ Hey <%= @user.fullname %>,
 </p>
 <ul>
   <li>
-    <b>Semantic Versioning:</b> Semantic versioning is something every software developer should know about. Now we mark version numbers green if they are conform with semantic versioning. Check out our <a href="http://blog.versioneye.com/2014/01/16/semantic-versioning/">beginners guide to semantic versioning</a>.
+    <b>Bower Integration:</b> Bower is a package manager for the Web (JavaScript &amp; CSS). We just recently finished our Bower integration. Check out how you can stay up-to-date with your frontend components: <a href="http://blog.versioneye.com/2014/01/28/bower-integration/">Bower Integration</a>.
     <br/><br/>
-  </li>
-  <li>
-    <b>Submit new packages:</b> If you want to get notified about new versions of projects we don't track yet, you can now submit them to us and we will integrate them into our crawling framework. Read mor that <a href="http://blog.versioneye.com/2014/01/16/submit-new-packages/">here</a>.
+    <img src="http://versioneye.files.wordpress.com/2014/01/bower-logo.png" width="200" />
     <br/><br/>
-  </li>
-  <li>
-    <b>Follow All:</b> Now you can follow multiple software libraries with one single click.
-    Read more <a href="http://blog.versioneye.com/2014/01/16/follow-all/">here</a><br/><br/>
   </li>
 </ul>
 <p>
